# graphoscope

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: deploy-pages.yml
crates/reduce/: Cargo.toml
crates/reduce/src/: coverage.rs  gfa.rs  main.rs  reduce.rs  simplify.rs  tests.rs
scripts/: build-genes.mjs  build-wasm.sh  db-server.mjs  fetch-fixture.mjs  simple-sds-wasm32.patch
src/lib/: GfaView.svelte  IgvView.svelte  RawDataView.svelte  RefArcView.svelte  analytics.ts  apiReport.test.ts  apiReport.ts  gbzClient.ts  geneTrack.ts  genes.ts  gfa.test.ts  gfa.ts  gfaReduce.worker.ts  graphs.ts  nonRefNodes.ts  query.worker.ts  reducedConsumer.test.ts  vfs.ts
src/lib/graph/: GraphCanvas.svelte  GraphLayoutView.svelte  backbone.ts  colors.ts  fixtures.ts  forceLayout.ts  gfaToGraph.ts  layout.worker.ts  prng.ts  simplify.test.ts  simplify.ts  types.ts
src/lib/graph/fixtures/: c4a.gfa  chr20_200kb.gfa  cyclic.gfa  large_del.gfa  large_ins.gfa  long_run.gfa  mhc_2kb.gfa  mhc_84kb.gfa  mhc_8kb.gfa  mixed.gfa  mnp.gfa  multiallelic.gfa  nested.gfa  small_del.gfa  small_ins.gfa  smn1.gfa  snp.gfa
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/api/: +page.svelte
src/routes/playground/: +page.svelte
static/: query.wasm
static/genes/: genes-chm13.json  genes-grch38.json
